--- a/assets/fonts/iconfont.css
+++ b/assets/fonts/iconfont.css
@@ -14,76 +14,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-state:before { content: "\e600"; }
 
-.icon-experience:before { content: "\e628"; }
+.icon-comment:before { content: "\e6d3"; }
 
-.icon-jiguan:before { content: "\e650"; }
+.icon-phone1:before { content: "\e622"; }
 
-.icon-jianli:before { content: "\e61a"; }
+.icon-photo1:before { content: "\e636"; }
 
-.icon-pxreact2:before { content: "\e601"; }
+.icon-bang:before { content: "\e692"; }
 
-.icon-contact:before { content: "\e6cc"; }
+.icon-mes2:before { content: "\e643"; }
 
-.icon-weixin:before { content: "\e7a7"; }
+.icon-exit:before { content: "\e60b"; }
 
-.icon-skill:before { content: "\e613"; }
+.icon-password:before { content: "\e60f"; }
 
-.icon-jquery:before { content: "\e605"; }
+.icon-check:before { content: "\e624"; }
 
-.icon-about:before { content: "\e60f"; }
+.icon-phone:before { content: "\e667"; }
 
-.icon-zhihu:before { content: "\e619"; }
+.icon-heart:before { content: "\e611"; }
 
-.icon-phone:before { content: "\e61b"; }
+.icon-message:before { content: "\e632"; }
 
-.icon-University:before { content: "\e699"; }
+.icon-edit:before { content: "\e602"; }
 
-.icon-intention:before { content: "\e692"; }
+.icon-mes:before { content: "\e69a"; }
 
-.icon-index:before { content: "\e611"; }
+.icon-plus:before { content: "\e662"; }
 
-.icon-html5:before { content: "\e604"; }
+.icon-email:before { content: "\e6a4"; }
 
-.icon-qq:before { content: "\e61d"; }
+.icon-sousuo:before { content: "\e960"; }
 
-.icon-keyboard:before { content: "\e696"; }
+.icon-edit2:before { content: "\e603"; }
 
-.icon-link:before { content: "\e90c"; }
+.icon-set:before { content: "\e64e"; }
 
-.icon-tools:before { content: "\e8a8"; }
-
-.icon-age:before { content: "\e681"; }
-
-.icon-javascript:before { content: "\e635"; }
-
-.icon-english:before { content: "\e643"; }
-
-.icon-project:before { content: "\e810"; }
-
-.icon-sass:before { content: "\e646"; }
-
-.icon-css3:before { content: "\e61f"; }
-
-.icon-frame:before { content: "\e602"; }
-
-.icon-sex:before { content: "\e683"; }
-
-.icon-github:before { content: "\e803"; }
-
-.icon-weibo:before { content: "\e603"; }
-
-.icon-email:before { content: "\e74e"; }
-
-.icon-react:before { content: "\e64f"; }
-
-.icon-jiguan2:before { content: "\e606"; }
-
-.icon-xiaochengxu:before { content: "\e625"; }
-
-.icon-daogang:before { content: "\e60a"; }
-
-.icon-javascript2:before { content: "\e687"; }
-
-.icon-education:before { content: "\e607"; }
+.icon-view:before { content: "\e623"; }
